@@ -6,8 +6,7 @@ Xiaoting Lou (xlou@u.northwestern.edu)
 03/07/2012
 """
 
-from pylab import *
-import sys
+import matplotlib.pyplot as plt
 import matplotlib.transforms as transforms
 from pysmo.aimbat.sacpickle import loadData, SacDataHdrs
 from pysmo.aimbat.plotphase import getOptions, sacp1, sacp2, sacprs
@@ -15,9 +14,9 @@ from pysmo.aimbat.ttconfig import PPConfig, QCConfig, CCConfig, MCConfig
 
 
 def axes1(npick=2):
-	fig = figure(figsize=(9.5,12.7))
+	fig = plt.figure(figsize=(9.5,12.7))
 	axs = [fig.add_subplot(1,npick,i+1) for i in range(npick) ]
-	subplots_adjust(bottom=.04, top=0.97, left=.065, right=.905, wspace=.4, hspace=.1)
+	plt.subplots_adjust(bottom=.04, top=0.97, left=.065, right=.905, wspace=.4, hspace=.1)
 	return axs
 
 def getwin(gsac, opts, pick='t2'):
@@ -82,7 +81,7 @@ if __name__ == '__main__':
 		trans = transforms.blended_transform_factory(ax.transAxes, ax.transAxes)
 		ax.text(-.05, 1, tt, transform=trans, va='center', ha='right', size=16)	
 
-	savefig('egalignp1.pdf', format='pdf')
+	plt.savefig('egalignp1.pdf', format='pdf')
 
-	show()	
+	plt.show()	
 
