@@ -138,7 +138,7 @@ class CCConfig:
 		self.shift = config.getint('iccs', 'shift')
 		modu = config.get('iccs', 'xcorr_modu')
 		func = config.get('iccs', 'xcorr_func')
-		cmd1 = 'from {:s} import {:s}'.format(modu, func)
+		cmd1 = 'from .{:s} import {:s}'.format(modu, func)
 		cmd2 = 'self.xcorr = {:s}'.format(func)
 		exec(cmd1)
 		exec(cmd2)
@@ -172,7 +172,7 @@ class MCConfig:
 		self.shift = config.getint('mccc', 'shift')
 		modu = config.get('mccc', 'xcorr_modu')
 		func = config.get('mccc', 'xcorr_func')
-		cmd1 = 'from {:s} import {:s}'.format(modu, func)
+		cmd1 = 'from .{:s} import {:s}'.format(modu, func)
 		cmd2 = 'self.xcorr = {:s}'.format(func)
 		exec(cmd1)
 		exec(cmd2)
