@@ -19,7 +19,7 @@ Dec 19, 2012
 * Change font properties for station label to "monospace" for equal width
 * Minor changes in program descriptions, example scripts 
 
-aimbat-0.2
+aimbat-v0.2
 ============
 Main contributor: lkloh. Last update on Aug 23, 2016
 
@@ -36,3 +36,9 @@ May 14, 2014:
 May 17, 2014:
 * Added a GUI to allow sorting of the seismograms according to header, time difference, file name, ...
 * Added a button to return to original screen after you zoom in/out
+
+aimbat-v0.3-alpha1
+============
+June 3, 2018
+* Upgrade to python3 (May not back-compatible with python2). No change in functionalities from v0.2.
+* Include sacio in the same aimbat source package.
